--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
         android:layout_alignBottom="@+id/coordY"
         android:layout_alignEnd="@+id/boardView" />
 
-    <blokusgame.mi.android.hazi.blokus.View.BoardView
+    <View.BoardView
         android:id="@+id/boardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
