--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,87 +6,104 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:weightSum="10"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <View.BoardView
-        android:id="@+id/boardView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/playerTurn" />
-
-    <TextView
-        android:id="@+id/playerTurn"
-        android:textColor="#ff063dff"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/playerTxt"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/blockText"
-        android:layout_above="@+id/blockText"
-        android:layout_alignParentStart="true" />
+        android:layout_weight="4">
+        <View.BoardView
+            android:id="@+id/boardView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Block index:"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/blockText"
-        android:layout_above="@+id/coordinatesText"
-        android:layout_alignParentStart="true" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="6">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/blockIndex"
-        android:inputType="number"
-        android:layout_toEndOf="@+id/blockText"
-        android:layout_below="@+id/boardView"
-        android:layout_toStartOf="@+id/btnReset" />
+        <TextView
+            android:id="@+id/playerTurn"
+            android:textColor="#ff063dff"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/playerTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/txtBlockindex"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/blockText" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Coordinates"
-        android:id="@+id/coordinatesText"
-        android:layout_alignParentBottom="true" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/blockIndex"
+                android:inputType="number" />
+         </LinearLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:id="@+id/coordX"
-        android:layout_toEndOf="@+id/coordinatesText"
-        android:layout_toStartOf="@+id/btnReset"
-        android:layout_below="@+id/blockIndex"
-        android:layout_alignStart="@+id/blockIndex"
-        android:layout_above="@+id/coordinatesText" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:weightSum="5"
+            android:baselineAligned="false">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:weightSum="5"
+                android:orientation="horizontal">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:id="@+id/coordY"
-        android:layout_toStartOf="@+id/btnReset"
-        android:layout_toEndOf="@+id/blockText"
-        android:layout_below="@+id/coordX"
-        android:layout_alignParentBottom="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/tytCoordinates"
+                    android:layout_weight="3"
+                    android:id="@+id/coordinatesText" />
+                 <LinearLayout
+                     android:layout_width="115dp"
+                     android:layout_height="wrap_content"
+                     android:orientation="vertical">
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:id="@+id/coordX" />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:id="@+id/coordY" />
+                 </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="4">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Step"
-        android:id="@+id/btnStep"
-        android:layout_below="@+id/btnReset"
-        android:layout_alignParentEnd="true" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Step"
+                    android:id="@+id/btnStep" />
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Reset"
-        android:id="@+id/btnReset"
-        android:layout_below="@+id/boardView"
-        android:layout_alignEnd="@+id/boardView" />
-
-</RelativeLayout>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reset"
+                    android:id="@+id/btnReset" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
