block lerakas csodai

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,9 @@
            <View.BoardView
                 android:id="@+id/boardView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_centerHorizontal="true"/>
             <TextView
                 android:id="@+id/playerTurn"
                 android:textColor="#ff063dff"
