--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,17 @@
                 android:layout_alignTop="@+id/coordX"
                 android:layout_centerHorizontal="true"
                 android:layout_alignBottom="@+id/btnStep" />
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/rotations_layout">
 
+                    </LinearLayout>
+            </HorizontalScrollView>
 
         </RelativeLayout>
 
