--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,12 +43,14 @@
                 android:layout_alignTop="@+id/btnStep"
                 android:layout_alignParentEnd="true" />
             <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btnReset">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:background="@android:color/white"
                     android:id="@+id/rotations_layout">
 
                     </LinearLayout>
@@ -57,7 +59,7 @@
         </RelativeLayout>
 
         <HorizontalScrollView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="wrap_content"
