--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
                 android:layout_below="@+id/btnReset">
                 <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="fill_parent"
                     android:orientation="horizontal"
                     android:background="@android:color/white"
                     android:id="@+id/rotations_layout">
