--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -10,7 +10,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/game_name"
         android:text="@string/game_name"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="match_parent"
