--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
     <com.sothree.slidinguppanel.SlidingUpPanelLayout
-        xmlns:sothree="http://schemas.android.com/apk/blokusgame.mi.android.hazi.blokus"
+        xmlns:sothree="http://schemas.android.com/apk/blokusgame.mi.android.hazi.com.elekt.blokus"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/sliding_layout"
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-           <View.BoardView
+           <com.elekt.blokus.View.BoardView
                 android:id="@+id/boardView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
